--- a/patient-journal-backend-microservices/src/main/resources/application.properties
+++ b/patient-journal-backend-microservices/src/main/resources/application.properties
@@ -19,3 +19,12 @@ server.port=8080
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.connection-timeout=20000
+
+# RabbitMQ Configuration
+spring.rabbitmq.host=localhost # För lokal testning
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=user
+spring.rabbitmq.password=password
+
+# Vid K8s-deploy ändras hosten i env-variabeln:
+# SPRING_RABBITMQ_HOST=rabbitmq-service
