--- a/message-service/src/main/resources/application.properties
+++ b/message-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=message-service
 
-# Använd en annan port än patient-service
+# Anvand en annan port an patient-service
 server.port=8081
 
 # Database Configuration
