--- a/image-service/k8s/deployment.yaml
+++ b/image-service/k8s/deployment.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: image-service
           image: image-service:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3000
           env:
