--- a/patient-journal-backend-microservices/src/main/resources/application.properties
+++ b/patient-journal-backend-microservices/src/main/resources/application.properties
@@ -21,10 +21,9 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.connection-timeout=20000
 
 # RabbitMQ Configuration
-spring.rabbitmq.host=localhost # För lokal testning
+spring.rabbitmq.host=localhost # lokal testning
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=user
 spring.rabbitmq.password=password
 
-# Vid K8s-deploy ändras hosten i env-variabeln:
 # SPRING_RABBITMQ_HOST=rabbitmq-service
