--- a/patient-journal-backend-microservices/src/main/resources/application.properties
+++ b/patient-journal-backend-microservices/src/main/resources/application.properties
@@ -20,10 +20,14 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.connection-timeout=20000
 
-# RabbitMQ Configuration
-spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:rabbitmq-service}
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=user
-spring.rabbitmq.password=password
+# Kafka Configuration
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
 
-# SPRING_RABBITMQ_HOST=rabbitmq-service
+# Kafka Producer Configuration
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.add.type.headers=false
+
+# Kafka Topics
+kafka.topic.patient=patient.events
+kafka.topic.journal=journal.events
