--- a/search-service/src/main/k8s/deplyment.yaml
+++ b/search-service/src/main/k8s/deplyment.yaml
@@ -21,17 +21,56 @@ spec:
           ports:
             - containerPort: 8083
           env:
-            - name: SPRING_DATASOURCE_URL
-              value: "postgres-service:5432"
-            - name: SPRING_DATASOURCE_USERNAME
+            - name: POSTGRES_HOST
+              value: "postgres-service"
+            - name: POSTGRES_PORT
+              value: "5432"
+            - name: POSTGRES_DB
+              value: "search_db"
+            - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
                   name: postgres-secret
                   key: username
-            - name: SPRING_DATASOURCE_PASSWORD
+            - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: postgres-secret
                   key: password
-            - name: MP_MESSAGING_INCOMING_PATIENT_EVENTS_HOST
-              value: "rabbitmq-service"
+            - name: KAFKA_BOOTSTRAP_SERVERS
+              value: "kafka-service:9092"
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
+            limits:
+              memory: "1Gi"
+              cpu: "500m"
+          livenessProbe:
+            httpGet:
+              path: /api/search/health
+              port: 8083
+            initialDelaySeconds: 60
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /api/search/health
+              port: 8083
+            initialDelaySeconds: 30
+            periodSeconds: 5
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: search-service
+  labels:
+    app: search-service
+spec:
+  type: LoadBalancer
+  selector:
+    app: search-service
+  ports:
+    - protocol: TCP
+      port: 8083
+      targetPort: 8083
+      nodePort: 30083
