--- a/search-service/src/main/resources/application.properties
+++ b/search-service/src/main/resources/application.properties
@@ -1,26 +1,41 @@
+# Quarkus Application Configuration
 quarkus.application.name=search-service
+
+# HTTP Configuration
 quarkus.http.port=8083
 
-# Databas-anslutning (samma som de andra)
+# Database Configuration
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-quarkus.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
-quarkus.datasource.jdbc.url=jdbc:postgresql://${SPRING_DATASOURCE_URL:localhost:5432}/patient_journal_db
+quarkus.datasource.username=${POSTGRES_USER:postgres}
+quarkus.datasource.password=${POSTGRES_PASSWORD:postgres}
+quarkus.datasource.jdbc.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:search_db}
 
-# Hibernate
+# Hibernate Configuration
 quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.sql-load-script=no-file
 
-# RabbitMQ (Mottagare)
-mp.messaging.incoming.encounter-events.connector=smallrye-rabbitmq
-mp.messaging.incoming.encounter-events.queue.name=encounter_events_queue
-mp.messaging.incoming.encounter-events.host=rabbitmq-service
-mp.messaging.incoming.patient-events.connector=smallrye-rabbitmq
-mp.messaging.incoming.patient-events.host=localhost # För lokal testning
-mp.messaging.incoming.patient-events.port=5672
-mp.messaging.incoming.patient-events.username=user
-mp.messaging.incoming.patient-events.password=password
-mp.messaging.incoming.patient-events.address=patient_journal_exchange # Namnet på exchangen
-mp.messaging.incoming.patient-events.queue.name=patient-queue-search
-mp.messaging.incoming.patient-events.queue.durable=true
-mp.messaging.incoming.patient-events.binding.routing-keys=patient.events # Matchar routing key
+# Kafka Configuration
+kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+
+# Incoming Patient Events from Kafka
+mp.messaging.incoming.patient-events.connector=smallrye-kafka
+mp.messaging.incoming.patient-events.topic=patient.events
+mp.messaging.incoming.patient-events.value.deserializer=io.quarkus.kafka.client.serialization.ObjectMapperDeserializer
+mp.messaging.incoming.patient-events.specific.value.type=se.kth.lab2.dto.PatientDTO
+mp.messaging.incoming.patient-events.auto.offset.reset=earliest
+mp.messaging.incoming.patient-events.enable.auto.commit=true
+mp.messaging.incoming.patient-events.group.id=search-service-patient-group
+
+# Incoming Journal Events from Kafka
+mp.messaging.incoming.journal-events.connector=smallrye-kafka
+mp.messaging.incoming.journal-events.topic=journal.events
+mp.messaging.incoming.journal-events.value.deserializer=io.quarkus.kafka.client.serialization.ObjectMapperDeserializer
+mp.messaging.incoming.journal-events.specific.value.type=se.kth.lab2.dto.JournalEntryDTO
+mp.messaging.incoming.journal-events.auto.offset.reset=earliest
+mp.messaging.incoming.journal-events.enable.auto.commit=true
+mp.messaging.incoming.journal-events.group.id=search-service-journal-group
+
+# Logging
+quarkus.log.level=INFO
+quarkus.log.category."se.kth.lab2".level=DEBUG
